--- a/service/templates/mod/modals.html
+++ b/service/templates/mod/modals.html
@@ -14,13 +14,16 @@
                 <!-- Project Details Go Here -->
                 <h2 class="text-uppercase">카테고리 별 다운로드 수</h2>
                 <p class="item-intro text-muted">playstore vs appstore</p>
-                <img class="img-fluid d-block mx-auto" src="/static/img/portfolio/playstore_category.png" alt="" width = 60%>
-                <p>플레이스토어 바차트</p>
-                <img class="img-fluid d-block mx-auto" src="/static/img/portfolio/applestore_category.png" alt="" width = 60%>
-                <p>앱스토어 바차트</p>
+                <img class="img-fluid d-block mx-auto" src="/static/img/portfolio/playstore_category.png" alt="" width = 70%>
+                <p>플레이스토어 차트</p>
+                <p>현 플레이스토어 어플리케이션 카테고리별 다운로드 수를 표로 나타내었습니다. 소비자들의 관심층이 Communication 과 Video_players, Social 그리고  Entertainment 순으로 비중이 높다는 것을 알 수 있었고 생활에 편리함을 제공하는 어플리케이션들이 중위권까지 포진되어있음 보아 절대 다수가 이용하고 있음을 확인할 수 있습니다.</p>
+                <img class="img-fluid d-block mx-auto" src="/static/img/portfolio/applestore_category.png" alt="" width = 70%>
+                <p>앱스토어 차트</p>
+                <p>비교 대상군으로  apple store를 잡고 분석한 결과 sns(communication 포함) > music > reference > weather순으로 SNS란 공통적인 요소가 독보적 1위를 차지하고 있습니다.</p>
+                
                 <ul class="list-inline">
-                  <li>Date: January 2017</li>
-                  <li>Client: Threads</li>
+                  <li>Date: 2019.02.26</li>
+                  <li>Client: Group C</li>
                   <li>Category : installs</li>
                 </ul>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
@@ -50,15 +53,15 @@
                 <!-- Project Details Go Here -->
                 <h2 class="text-uppercase">가격 별 다운로드 수</h2>
                 <p class="item-intro text-muted">playstore vs appstore</p>
-                <img class="img-fluid d-block mx-auto" src="/static/img/portfolio/playsotre_price.png" alt="" width = 60%>
-              
-                <p>플레이스토어 바차트</p>
-                <img class="img-fluid d-block mx-auto" src="/static/img/portfolio/applestore_price.png" alt="" width = 60%>
-                <p>앱스토어 바차트</p>
+                <img class="img-fluid d-block mx-auto" src="/static/img/portfolio/playsotre_price.png" alt="" width = 70%>
+                <p>플레이스토어 차트</p>
+                <img class="img-fluid d-block mx-auto" src="/static/img/portfolio/applestore_price.png" alt="" width = 70%>
+                <p>앱스토어 차트</p>
+                <p>보기에도 확연히 무료 어플리케이션의 반응이 좋지만 특이점으로 애플스토어에는 유료 어플리케이션의 비중이 다양하게 분포되어있습니다. 경제력을 가진 소비층이 두터운 시장이 애플스토어란 것을 확인 할 수 있고 가격대 역시 다양하게 분포되어 있어 추가적인 수입요소가 기대되는 시장입니다.</p>
                 <ul class="list-inline">
-                  <li>Date: January 2017</li>
-                  <li>Client: Explore</li>
-                  <li>Category: Graphic Design</li>
+                  <li>Date: 2019.02.26</li>
+                  <li>Client: Group C</li>
+                  <li>Category : installs</li>
                 </ul>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
@@ -87,14 +90,15 @@
                 <!-- Project Details Go Here -->
                 <h2 class="text-uppercase">평점 별 다운로드 수</h2>
                 <p class="item-intro text-muted">playstore vs appstore</p>
-                <img class="img-fluid d-block mx-auto" src="/static/img/portfolio/playstore_rating.png" alt="" width = 60%>
-                <p>플레이스토어 바차트</p>
-                <img class="img-fluid d-block mx-auto" src="/static/img/portfolio/applestore_rating.png" alt="" width = 60%>
-                <p>앱스토어 바차트</p>
+                <img class="img-fluid d-block mx-auto" src="/static/img/portfolio/playstore_rating.png" alt="" width = 70%>
+                <p>플레이스토어 차트</p>
+                <p>구글플레이스토어는 4.19가 평균 수치이을 보아 4점을 넘는 것이 특이점이 아니라 기본적인 요소임을 확인할 수 있고 이렇듯 상향평준화 되어있는 평점을 보충 반영해주는 리뷰가 소비자들을 끌어들이는 더 유의미한 유입요소로 꼽을 수 있다고 생각합니다.</p>
+                <img class="img-fluid d-block mx-auto" src="/static/img/portfolio/applestore_rating.png" alt="" width = 70%>
+                <p>앱스토어 차트</p>
                 <ul class="list-inline">
-                  <li>Date: January 2017</li>
-                  <li>Client: Finish</li>
-                  <li>Category: Identity</li>
+                  <li>Date: 2019.02.26</li>
+                  <li>Client: Group C</li>
+                  <li>Category : installs</li>
                 </ul>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
@@ -125,12 +129,13 @@
                 <p class="item-intro text-muted">playstore vs appstore</p>
                 <img class="img-fluid d-block mx-auto" src="/static/img/portfolio/playstore_contentrating.png" alt="" width = 60%>
                 <p>플레이스토어 바차트</p>
+                <p>예상과는 다르게  청소년 이상 이용가능한 어플이 제일 많다.</p>
                 <img class="img-fluid d-block mx-auto" src="/static/img/portfolio/applestore_contentrating.png" alt="" width = 60%>
                 <p>앱스토어 바차트</p>
                 <ul class="list-inline">
-                  <li>Date: January 2017</li>
-                  <li>Client: Lines</li>
-                  <li>Category: Branding</li>
+                  <li>Date: 2019.02.26</li>
+                  <li>Client: Group C</li>
+                  <li>Category : installs</li>
                 </ul>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
@@ -162,9 +167,9 @@
                 <img class="img-fluid d-block mx-auto" src="img/portfolio/05-full.jpg" alt="">
                 <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                 <ul class="list-inline">
-                  <li>Date: January 2017</li>
-                  <li>Client: Southwest</li>
-                  <li>Category: Website Design</li>
+                  <li>Date: 2019.02.26</li>
+                  <li>Client: Group C</li>
+                  <li>Category : installs</li>
                 </ul>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
@@ -191,14 +196,26 @@
             <div class="col-lg-8 mx-auto">
               <div class="modal-body">
                 <!-- Project Details Go Here -->
-                <h2 class="text-uppercase">Project Name</h2>
-                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                <img class="img-fluid d-block mx-auto" src="img/portfolio/06-full.jpg" alt="">
-                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                <h2 class="text-uppercase">Word Cloud</h2>
+                <p class="item-intro text-muted">긍정,부정 리뷰 단어 시각화</p>
+                <img class="img-fluid d-block mx-auto" src="static/img/cloud/category_cloud.png" alt="" width = 100%>
+                <p>1</p>
+                <img class="img-fluid d-block mx-auto" src="static/img/cloud/review_pos.png" alt="" width = 100%>
+                <p>2</p>
+                <img class="img-fluid d-block mx-auto" src="static/img/cloud/review_neu.png" alt="" width = 100%>
+                <p>3</p>
+                <img class="img-fluid d-block mx-auto" src="static/img/cloud/review_neg.png" alt="" width = 100%>
+                <p>4</p>
+                <img class="img-fluid d-block mx-auto" src="static/img/cloud/aa1.png" alt="" width = 100%>
+                <p>5</p>
+                <img class="img-fluid d-block mx-auto" src="static/img/cloud/aa2.png" alt="" width = 100%>
+                <p>6</p>
+                <img class="img-fluid d-block mx-auto" src="static/img/cloud/aa3.png" alt="" width = 100%>
+                <p>7</p>
                 <ul class="list-inline">
-                  <li>Date: January 2017</li>
-                  <li>Client: Window</li>
-                  <li>Category: Photography</li>
+                  <li>Date: 2019.02.26</li>
+                  <li>Client: Group C</li>
+                  <li>Category : Word Cloud</li>
                 </ul>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
