--- a/service/templates/mod/portfolio.html
+++ b/service/templates/mod/portfolio.html
@@ -73,8 +73,8 @@
             <img class="img-fluid" src="static/img/portfolio/05-thumbnail.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Search In Playstore</h4>
-            <p class="text-muted">검색</p>
+            <h4>Prediction Model</h4>
+            <p class="text-muted">평점 예측모델</p>
           </div>
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
@@ -87,8 +87,8 @@
             <img class="img-fluid" src="static/img/portfolio/06-thumbnail.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>분석</h4>
-            <p class="text-muted">방식</p>
+            <h4>Word Cloud</h4>
+            <p class="text-muted">단어 구름</p>
           </div>
         </div>
       </div>
