--- a/service/templates/mod/services.html
+++ b/service/templates/mod/services.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-lg-12 text-center">
         <h2 class="section-heading text-uppercase">Services</h2>
-        <h3 class="section-subheading text-muted">App PlayStore 분석</h3>
+        <h3 class="section-subheading text-muted">Application Store 분석</h3>
       </div>
     </div>
     <div class="row text-center">
@@ -18,7 +18,8 @@
             </div>
           </a>
         </span>
-        <h4 class="service-heading">Goolge Playstore & Apple Store Analysis</Goolge></h4>
+        <h4 class="service-heading">Goolge Playstore & Apple Store Analysis</Goolge>
+        </h4>
         <p class="text-muted">플레이스토어 & 앱스토어 분석</p>
       </div>
       <div class="col-md-4">
@@ -32,8 +33,8 @@
             </div>
           </a>
         </span>
-        <h4 class="service-heading">소개제목2</h4>
-        <p class="text-muted">소개2</p>
+        <h4 class="service-heading">PREDICTION MODEL</h4>
+        <p class="text-muted">예측 모델</p>
       </div>
       <div class="col-md-4">
         <span class="fa-stack fa-4x">
@@ -46,8 +47,8 @@
             </div>
           </a>
         </span>
-        <h4 class="service-heading">소개제목3</h4>
-        <p class="text-muted">소개3</p>
+        <h4 class="service-heading">REVIEW ANALYSIS</h4>
+        <p class="text-muted">리뷰 분석</p>
       </div>
       <div class="col-md-4">
 
@@ -61,11 +62,10 @@
             </div>
           </a>
         </span>
-        <h4 class="service-heading">플레이스토어 검색</h4>
-        <p class="text-muted">Search in Play Store</p>
+        <h4 class="service-heading">Search In Play Store</h4>
+        <p class="text-muted">플레이스토어 검색</p>
       </div>
       <div class="col-md-4">
-
         <span class="fa-stack fa-4x">
           <a class="portfolio-link" data-toggle="modal" href="#serviceModal5">
             <div class="portfolio-hover">
@@ -76,8 +76,22 @@
             </div>
           </a>
         </span>
-        <h4 class="service-heading">앱스토어 검색</h4>
-        <p class="text-muted">Search In Apple Store</p>
+        <h4 class="service-heading">Search In Apple Store</h4>
+        <p class="text-muted">앱스토어 검색</p>
+      </div>
+      <div class="col-md-4">
+        <span class="fa-stack fa-4x">
+          <a class="portfolio-link" data-toggle="modal" href="#serviceModal6">
+            <div class="portfolio-hover">
+              <div class="portfolio-hover-content">
+                <i class="fas fa-circle fa-stack-2x text-primary"></i>
+                <i class="fas fa-search fa-stack-1x fa-inverse"></i>
+              </div>
+            </div>
+          </a>
+        </span>
+        <h4 class="service-heading">Word Frequency</h4>
+        <p class="text-muted">카테고리별 단어 빈도수</p>
       </div>
     </div>
 
