--- a/service/templates/mod/servicesModals.html
+++ b/service/templates/mod/servicesModals.html
@@ -110,6 +110,7 @@
                             <!-- Project Details Go Here -->
                             <h2 class="text-uppercase">Search in PlayStore</h2>
                             <p class="item-intro text-muted">어플 검색</p>
+                            <img class="img-fluid d-block mx-auto" src="/static/img/googleplay.jpg" alt="" width = 60%>
                             <div class="card-body">
                                 <form action = '/search' method="POST"  target=_blank>
                                     <select name='points' class="form-control form-control-sm">
@@ -197,6 +198,7 @@
                             <!-- Project Details Go Here -->
                             <h2 class="text-uppercase">Search in AppStore</h2>
                             <p class="item-intro text-muted">어플 검색</p>
+                            <img class="img-fluid d-block mx-auto" src="/static/img/appstore.jpg" alt="" width = 80%>
                             <div class="card-body">
                                 <form action = '/search2' method="POST"  target=_blank>
                                     <select name='points' class="form-control form-control-sm">
