--- a/service/templates/mod/about.html
+++ b/service/templates/mod/about.html
@@ -2,8 +2,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">과정(?)</h2>
-          <h3 class="section-subheading text-muted">과정-결과(?)</h3>
+          <h2 class="section-heading text-uppercase">분석 과정</h2>
+          <h3 class="section-subheading text-muted">Data Analysis</h3>
         </div>
       </div>
       <div class="row">
@@ -15,11 +15,11 @@
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h4>2009-2011</h4>
-                  <h4 class="subheading">Our Humble Beginnings</h4>
+                  <h4>데이터베이스 획득</h4>
+                  <h4 class="subheading">DB From kaggle</h4>
                 </div>
                 <div class="timeline-body">
-                  <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                  <p class="text-muted">Kaggle에서 앱 스토어 데이터베이스 획득</p>
                 </div>
               </div>
             </li>
@@ -29,39 +29,39 @@
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h4>March 2011</h4>
-                  <h4 class="subheading">An Agency is Born</h4>
+                  <h4>데이터 전처리</h4>
+                  <h4 class="subheading">Data Preprocessing</h4>
                 </div>
                 <div class="timeline-body">
-                  <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                  <p class="text-muted">데이터 분석을 위한 데이터베이스 전처리 </p>
                 </div>
               </div>
             </li>
             <li>
               <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="img/about/3.jpg" alt="">
+                <img class="rounded-circle img-fluid" src="static/img/about/3.jpg" alt="">
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h4>December 2012</h4>
-                  <h4 class="subheading">Transition to Full Service</h4>
+                  <h4>데이터 분석</h4>
+                  <h4 class="subheading">preprocessing</h4>
                 </div>
                 <div class="timeline-body">
-                  <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                  <p class="text-muted">어플 스토어 데이터의 다운로드 수(INSTALLS)를 종속변수로 두어 차트로 시각화, 리뷰데이터 긍정, 중립, 부정 워드 클라우딩, 카테고리별 워드 클라우딩</p>
                 </div>
               </div>
             </li>
             <li class="timeline-inverted">
               <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="img/about/4.jpg" alt="">
+                <img class="rounded-circle img-fluid" src="static/img/about/4.jpg" alt="">
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h4>July 2014</h4>
-                  <h4 class="subheading">Phase Two Expansion</h4>
+                  <h4>예측 모델제작</h4>
+                  <h4 class="subheading">Prediction Model</h4>
                 </div>
                 <div class="timeline-body">
-                  <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                  <p class="text-muted">다운로드 수, 리뷰의 개수, 가격, 카테고리 값을 넣었을 때 평점을 예측하는 모델 제작</p>
                 </div>
               </div>
             </li>
