--- a/service/templates/mod/modals.html
+++ b/service/templates/mod/modals.html
@@ -162,14 +162,14 @@
             <div class="col-lg-8 mx-auto">
               <div class="modal-body">
                 <!-- Project Details Go Here -->
-                <h2 class="text-uppercase">Project Name</h2>
-                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                <h2 class="text-uppercase">Prediction Model</h2>
+                <p class="item-intro text-muted">평점 예측 모델</p>
                 <img class="img-fluid d-block mx-auto" src="img/portfolio/05-full.jpg" alt="">
-                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                <p>내용</p>
                 <ul class="list-inline">
                   <li>Date: 2019.02.26</li>
                   <li>Client: Group C</li>
-                  <li>Category : installs</li>
+                  <li>Category : Prediction Model</li>
                 </ul>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
