--- a/service/templates/mod/ourteam.html
+++ b/service/templates/mod/ourteam.html
@@ -3,7 +3,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Our Amazing Team</h2>
-          <h3 class="section-subheading text-muted">조원님들</h3>
+          <h3 class="section-subheading text-muted">C팀 팀원님들</h3>
         </div>
       </div>
       <div class="row">
@@ -11,7 +11,7 @@
           <div class="team-member">
             <img class="mx-auto rounded-circle" src="img/team/1.jpg" alt="">
             <h4>이은송</h4>
-            <p class="text-muted">Lead Designer</p>
+            <p class="text-muted">Lead Developer</p>
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
                 <a href="#">
@@ -35,7 +35,7 @@
           <div class="team-member">
             <img class="mx-auto rounded-circle" src="img/team/2.jpg" alt="">
             <h4>김필원</h4>
-            <p class="text-muted">Lead Marketer</p>
+            <p class="text-muted">Lead Developer</p>
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
                 <a href="#">
