--- a/service/templates/mod/about.html
+++ b/service/templates/mod/about.html
@@ -2,8 +2,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">분석 과정</h2>
-          <h3 class="section-subheading text-muted">Data Analysis</h3>
+          <h2 class="section-heading text-uppercase">Analysis Process</h2>
+          <h3 class="section-subheading text-muted">분석 과정</h3>
         </div>
       </div>
       <div class="row">
@@ -44,7 +44,7 @@
               <div class="timeline-panel">
                 <div class="timeline-heading">
                   <h4>데이터 분석</h4>
-                  <h4 class="subheading">preprocessing</h4>
+                  <h4 class="subheading">Data Analysis</h4>
                 </div>
                 <div class="timeline-body">
                   <p class="text-muted">어플 스토어 데이터의 다운로드 수(INSTALLS)를 종속변수로 두어 차트로 시각화, 리뷰데이터 긍정, 중립, 부정 워드 클라우딩, 카테고리별 워드 클라우딩</p>
@@ -61,7 +61,7 @@
                   <h4 class="subheading">Prediction Model</h4>
                 </div>
                 <div class="timeline-body">
-                  <p class="text-muted">다운로드 수, 리뷰의 개수, 가격, 카테고리 값을 넣었을 때 평점을 예측하는 모델 제작</p>
+                  <p class="text-muted">다운로드 수, 리뷰의 개수, 가격, 카테고리, 사용자등급 값으로 평점을 예측하는 모델 제작</p>
                 </div>
               </div>
             </li>
