--- a/service/templates/mod/modals.html
+++ b/service/templates/mod/modals.html
@@ -199,19 +199,19 @@
                 <h2 class="text-uppercase">Word Cloud</h2>
                 <p class="item-intro text-muted">긍정,부정 리뷰 단어 시각화</p>
                 <img class="img-fluid d-block mx-auto" src="static/img/cloud/category_cloud.png" alt="" width = 100%>
-                <p>1</p>
+                <p>빈도수 높은 단어 클라우딩</p>
                 <img class="img-fluid d-block mx-auto" src="static/img/cloud/review_pos.png" alt="" width = 100%>
-                <p>2</p>
+                <p>리뷰가 도움이 됐나 (전처리X)</p>
                 <img class="img-fluid d-block mx-auto" src="static/img/cloud/review_neu.png" alt="" width = 100%>
-                <p>3</p>
+                <p>리뷰가 도움이 중간 (전처리X)</p>
                 <img class="img-fluid d-block mx-auto" src="static/img/cloud/review_neg.png" alt="" width = 100%>
-                <p>4</p>
+                <p>리뷰가 도움이 안됨 (전처리X)</p>
                 <img class="img-fluid d-block mx-auto" src="static/img/cloud/aa1.png" alt="" width = 100%>
-                <p>5</p>
+                <p>리뷰가 도움이 됐나</p>
                 <img class="img-fluid d-block mx-auto" src="static/img/cloud/aa2.png" alt="" width = 100%>
-                <p>6</p>
+                <p>리뷰가 도움이 중간</p>
                 <img class="img-fluid d-block mx-auto" src="static/img/cloud/aa3.png" alt="" width = 100%>
-                <p>7</p>
+                <p>리뷰가 도움이 안됨</p>
                 <ul class="list-inline">
                   <li>Date: 2019.02.26</li>
                   <li>Client: Group C</li>
