--- a/service/templates/mod/modals.html
+++ b/service/templates/mod/modals.html
@@ -164,8 +164,8 @@
                 <!-- Project Details Go Here -->
                 <h2 class="text-uppercase">Prediction Model</h2>
                 <p class="item-intro text-muted">평점 예측 모델</p>
-                <img class="img-fluid d-block mx-auto" src="img/portfolio/05-full.jpg" alt="">
-                <p>내용</p>
+                <a href = "/predict" target=_blank><img class="img-fluid d-block mx-auto" src="static/img/predictive.png" alt="" width = "60%"></a>
+                <p>예측모델(ANACONDA3)</p>
                 <ul class="list-inline">
                   <li>Date: 2019.02.26</li>
                   <li>Client: Group C</li>
